# DragonFruit

./: .env.example  .npmrc  .vercelignore  AGENTS.md  ATLAS_PROJECT_BRIEF.md  DEPLOYMENT.md  DRAGONFRUIT_SOURCE_OF_TRUTH.md  README.md  dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json  vercel.json
.claude/: launch.json
apps/mac-mini/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac-mini/src-tauri/src/: lib.rs  main.rs
docs/: agent-webhook.md  ai-workspace-connectors.md  celery-queues.md  coolify-self-hosted-infra.md  dragon-fruit.md  prd-brief-as-atlas-memory.md
plans/: 001-mcp-server-url-ssrf.md  002-verification-baseline.md  003-consolidate-html-builders.md  004-frontend-rerender-perf.md  005-split-god-files.md  006-doc-write-safety-net-spike.md  006-findings.md  007-triage-pre-existing-test-failures.md  008-fix-real-product-bugs.md  009-permission-403-not-404.md  010-fix-test-isolation.md  011-pytest-in-api-ci.md  012-doc-write-multiselect.md  013-doc-write-discard-revert.md  014-atlas-personality.md  015-wikipedia-integration.md  016-wiki-mention.md  017-agent-needs-input-resume.md  018-agent-notifications-delivery.md  019-convert-docs-folder-to-wiki.md  020-make-power-k-instant.md  021-fix-dropdown-transform-origins.md  022-remove-layout-motion-from-default-primitives.md  023-repair-shared-reduced-motion.md  024-clean-editor-motion.md  025-wiki-publish-visibility.md  026-atlas-doc-write-formatting.md  027-gamification-system.md  028-sticky-to-doc-task.md  029-live-editor-presence.md  030-page-version-history.md  README.md
(+1755 files in other folders)
