[package]
name = "dragonfruit_mini"
version = "0.1.0"
description = "DragonFruit Mac Mini app"
authors = ["DragonFruit"]
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "dragonfruit_mini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
